<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chotu Sales</string>
    <string name="action_settings">Settings</string>
    <string name="total">Total</string>
    <string name="barcode">Barcode</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="edit">Edit</string>
    <string name="confirm">Done</string>
    <string name="date">Date</string>
    <string name="date_added">Date Added</string>
    <string name="quantity">Qty</string>
    <string name="remove">Remove</string>
    <string name="scan">Scan</string>
    <string name="unit_price">Unit Price</string>
    <string name="name">Name</string>
    <string name="id">ID</string>
    <string name="cash">Cash</string>
    <string name="change">Change</string>
    <string name="hint_search">Enter name or barcode</string>
    <string name="hint_cash">Enter cash here</string>
    <string name="add_new_product">Add New Product</string>
    <string name="add_stock">Add A Product Lot</string>
    <string name="previous">&lt;</string>
    <string name="next">></string>
    <string name="inventory">Inventory</string>
    <string name="sale">Sale</string>
    <string name="report">Report</string>

    <string name="dialog_quit">Are you sure you want to QUIT?</string>
    <string name="dialog_remove_product">Are you sure you want to REMOVE this product?</string>
    <string name="dialog_clear_sale">Are you sure you want to CLEAR this sale?</string>
    <string name="hint_empty_sale">Sale is empty.</string>
    <string name="quit">Quit</string>
    <string name="no">No</string>
    <string name="product_detail">Product Detail</string>
    <string name="stock">Stock</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="please_input_all">Please fulfill all data.</string>
    <string name="please_fill_10_digits">Please fill 10 digits of phone number</string>
    <string name="need_money">Need</string>

    <string name="chotu_sales">Chotu Sales</string>
    <string name="none_found">No device found</string>
    <string name="select_device">Select a Device</string>
    <string name="none_paired">None paired</string>
    <string name="scanning">Scanning</string>
    <string name="title_paired_devices">Paired list</string>
    <string name="title_other_devices">Other Devices</string>
    <string name="button_scan">Scan</string>
    <string name="not_connected">Not connected</string>
    <string name="logout">Logout</string>
    <string name="refresh">Refresh</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <string name="lang_en">English</string>
    <string name="lang_th">ภาษาไทย (th)</string>
    <string name="lang_jp">日本語 (jp)</string>
    <string name="hint_lang">Please restart the application to apply this language settings.</string>
    <string name="settings">Settings</string>
    <string name="load_chotusales">Load ChotuSales</string>
    <string name="bt_not_enabled_leaving">Bluetooth not enabled leaving</string>
    <string name="enter_printer_header">Enter printer header</string>
    <string name="enter_printer_footer">Enter printer Footer</string>
    <string name="enter_vat_number">Enter GST Number</string>
    <string name="save_settings">Save Settings</string>
    <string name="btncancel">Cancel</string>
    <string name="tax_name">Tax name</string>
    <string name="percent">Percent</string>
    <string name="tax_type">Tax Type</string>
    <string name="tax">Tax</string>
    <string name="buyer">Buyer</string>
    <string name="print">Print</string>
    <string name="payment_method">Payment Method:</string>
    <string name="ok">Ok</string>
    <string name="fileselected">selected file is </string>
    <string name="sub_total">Sub Total</string>


    <string-array name="period">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="PayType">
        <item>Cash</item>
        <item>Credit</item>
        <item>Wallet</item>
    </string-array>

    <string-array name="usertypes">
        <item>admin</item>
        <item>user</item>
    </string-array>

    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_backspace">Back</string>
    <string name="dontrights">You don\'t have rights to access this</string>
    <string name="lock_device">Lock Device</string>

    <style name="ButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textStyle">bold</item>
        <item name="android:shadowColor">#000000</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">2</item>
    </style>

</resources>