<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:id="@+id/rootView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layoutDatehor">

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.35" />

        <Button
            android:id="@+id/previousButton"
            style="@style/ButtonText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:background="@drawable/btn_yellow"
            android:text="@string/previous"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/currentBox"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textAlignment="center"
            />

        <Button
            android:id="@+id/nextButton"
            style="@style/ButtonText"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:background="@drawable/btn_yellow"
            android:text="@string/next"
            android:textSize="14sp" />
    </LinearLayout>

    <!-- 
    <EditText
        android:id="@+id/searchBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter invoice ID here." >
    </EditText>
    -->

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/headingofList">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.1"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="#33B5E5"
                android:gravity="center"
                android:paddingRight="3dp"
                android:text="@string/id"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>


        <TableRow
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.3"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="#33B5E5"
                android:gravity="center"
                android:paddingRight="3dp"
                android:text="@string/buyer"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="0.35"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1.5"
                android:background="#33B5E5"
                android:gravity="center"
                android:paddingRight="3dp"
                android:text="@string/date"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.2"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingRight="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.75"
                android:background="#33B5E5"
                android:gravity="center"
                android:paddingRight="3dp"
                android:text="@string/tax"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.35"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingRight="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.75"
                android:background="#33B5E5"
                android:gravity="center"
                android:paddingRight="3dp"
                android:text="@string/total"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="4.96"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/saleListView"
            android:layout_width="match_parent"
            android:layout_height="fill_parent" >
        </ListView>
    </LinearLayout>



    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/totallayout">

        <TableRow
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="4.5"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="#0099CC"
                android:gravity="center"
                android:paddingRight="3dp"
                android:text="@string/total"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingRight="1dip"
            android:paddingTop="1dip" >

            <TextView
                android:id="@+id/totalBox"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.75"
                android:background="#0099CC"
                android:gravity="right|center_vertical"
                android:paddingRight="10dp"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>


        <TableRow
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:background="#FFFFFF"
            android:paddingBottom="1dip"
            android:paddingLeft="1dip"
            android:paddingRight="1dip"
            android:paddingTop="1dip" >

            <Button
                android:id="@+id/printButton"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="0.75"
                android:background="#434b4e"
                android:gravity="right|center_vertical"
                android:paddingRight="5dp"
                android:text="Print Report"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>


    </LinearLayout>


</LinearLayout>